[gd_scene load_steps=3 format=3 uid="uid://bkk5k6a480uxn"]

[ext_resource type="Script" path="res://src/autoloads/game_start_game_over.gd" id="1_j3x4q"]
[ext_resource type="Theme" uid="uid://s0srltpmhp6g" path="res://themes/main/main.tres" id="2_7n110"]

[node name="GameStartGameOver" type="CanvasLayer"]
layer = 3
script = ExtResource("1_j3x4q")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_7n110")
theme_type_variation = &"PanelHUD"

[node name="GameStartPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="GameStartPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_7n110")

[node name="VBoxContainer" type="VBoxContainer" parent="GameStartPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="GameStartPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7n110")
theme_type_variation = &"LabelDirections"
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Objective" type="Label" parent="GameStartPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7n110")
theme_type_variation = &"LabelDirections"
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Directions" type="Label" parent="GameStartPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7n110")
theme_type_variation = &"LabelDirections"
text = "Directions"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="GameStartPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PlayButton" type="Button" parent="GameStartPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("2_7n110")
text = "Play"

[node name="Control" type="Control" parent="GameStartPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GameOverPanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_7n110")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7n110")
theme_type_variation = &"LabelDirections"
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HighscoreAchieved" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("2_7n110")
theme_type_variation = &"LabelDirections"
text = "Highscore Achieved!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HomeButtonOnGameover" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("2_7n110")
text = "Home"

[node name="Control2" type="Control" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
